feat: Refactor controller names
